[gd_scene load_steps=7 format=1]

[ext_resource path="res://mage/meteor.gd" type="Script" id=1]
[ext_resource path="res://images/mage/meteor.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource/name = "rain"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("meteor:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0, 24 ] }
tracks/1/type = "value"
tracks/1/path = NodePath("meteor:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray(  ), "transitions":FloatArray(  ), "update":0, "values":[  ] }

[sub_resource type="Animation" id=2]

resource/name = "rain"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("meteor1:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0, 24 ] }

[sub_resource type="Animation" id=3]

resource/name = "rain"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("meteor2:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0, 24 ] }

[sub_resource type="Animation" id=4]

resource/name = "rain"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("meteor3:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0, 24 ] }

[node name="rain" type="Node2D"]

script/script = ExtResource( 1 )

[node name="meteor" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 613.711, 324.945 )
transform/scale = Vector2( 1, 2.84589 )
texture = ExtResource( 2 )
vframes = 5
hframes = 5
frame = 24

[node name="meteor1" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 707.438, 263.972 )
transform/scale = Vector2( 1, 2.68066 )
texture = ExtResource( 2 )
vframes = 5
hframes = 5
frame = 24

[node name="meteor2" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 850.977, 256.744 )
transform/scale = Vector2( 1, 2.92683 )
texture = ExtResource( 2 )
vframes = 5
hframes = 5
frame = 24

[node name="meteor3" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 768.955, 322.362 )
transform/scale = Vector2( 1, 3.11907 )
texture = ExtResource( 2 )
vframes = 5
hframes = 5
frame = 24

[node name="player" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/rain = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="player1" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/rain = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="player2" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/rain = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="player3" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/rain = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="finished" from="player" to="." method="_on_player_finished"]

[connection signal="finished" from="player1" to="." method="_on_player1_finished"]

[connection signal="finished" from="player2" to="." method="_on_player2_finished"]

[connection signal="finished" from="player3" to="." method="_on_player3_finished"]


